--- a/version.html
+++ b/version.html
@@ -4,5 +4,5 @@
 [version]alpha2[version]
 [history]Nova verzia, ktora opravuje spravovanie animacii pomocou tlacidiel pause/stop/play. Nacitanie obsahu pluginu priamo do obrazovky[history]
 [release]
-[version]0.19 Beta[version]
-[history]Testovacia verzia 0.19 Beta[history]
+[version]1.0a[version]
+[history]Alpha 1.0 s funkcionalitou stahovania novych verzii z internetu (konkretne z GITHUBU,no mozne pridat aj ine servery)[history]
